build inception! builder now based on Alpine

--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:wheezy
-RUN apt-get update && apt-get install -y curl wget tar
+FROM gliderlabs/alpine:3.2
+RUN apk-install curl wget tar bash
 COPY scripts/mkimage-alpine.bash scripts/apk-install /
 ENTRYPOINT ["/mkimage-alpine.bash"]
